Add build and start

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "dependencies": {
     "typescript": "^3.8.3"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "start": "npx tsc --w"
   },
   "author": "",
   "license": "ISC"
